Fix level bar not showing in pantheon-files

--- a/gtk-3.20/apps/_pantheon.scss
+++ b/gtk-3.20/apps/_pantheon.scss
@@ -287,24 +287,19 @@ LibraryWindow {
 
 /**level bars**/
 
-.sidebar .source-list{
-  &.view {
+.sidebar.source-list.view {
     &.level-bar {
-      &,&:selected,&:selected:focus{
-        background-color: transparentize(#fff, 0.86);
+      &, &:selected, &:selected:focus {
+        background: linear-gradient(transparentize(#fff, 0.86), transparentize(#fff, 0.86)) ;
         border: 1px solid transparentize(black, 0.86);
         box-shadow: 0 1px 0 transparentize(#000, 0.75);
         border-radius: 2px;
       }
-      &.fill-block{
-        border: none;
+    }
+    &.fill-block { 
+      border: none;
+      &, &:hover, &:selected, &:selected:focus {
+        background: linear-gradient($selected_bg_color, $selected_bg_color);
       }
     }
-    &.fill-block{
-      &,&:hover,&:selected,&:selected:focus{
-        background-image: none;
-        background-color: $selected_bg_color;
-      }
-    }
-  }
 }
